style.css
body {
  margin: 0;
  font-family: 'Kumbh Sans', sans-serif;
  font-size: 12px;
  background: linear-gradient(
    0deg,
    rgba(101, 101, 231, 1) 0%,
    rgba(175, 103, 233, 1) 100%
  );
  background-repeat: no-repeat;
  height: 100vh;
  color: hsl(238, 29%, 16%);
}

h1 {
  font-weight: 700;
  margin: 0;
}

.container {
  margin: 100px auto;
  /* max-width: 1000px; */
}

.app {
  background: #fff;
  border-radius: 10px;
}

.accordion {
  width: 600px;
  /* padding: 45px; */
}

.accordion .container {
  position: relative;
}

.accordion .label {
  position: relative;
  padding: 10px 0;
  cursor: pointer;
}

.accordion .label::before {
  content: url(/images/icon-arrow-down.svg);
  position: absolute;
  top: 50%;
  right: -5px;
  transform: translateY(-50%);
}

.accordion .content {
  position: relative;
  height: 0;
  text-align: justify;
  /* width: 400px; */
  overflow: hidden;
  transition: 0.5s;
}

.accordion .accordion-item.active .content {
  height: 50px;
}

.accordion .accordion-item.active .label::before {
  content: url(/images/icon-arrow-down.svg);
  position: absolute;
  top: 50%;
  right: -5px;
  transform: translateY(-50%);
  transform: rotate(180deg);
}

.accordion .accordion-item.active .label {
  font-weight: 700;
}

.accordion-item {
  border: none;
  border-bottom: 1px solid hsl(240, 5%, 91%);
}

.attribution {
  font-size: 11px;
  text-align: center;
  margin-top: 100px;
  /* edit margin later */
}
.attribution a {
  color: hsl(228, 45%, 44%);
}

